getters and setters for detail and note content type